# northstar-research

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  ROADMAP.md  ROOT_STRUCTURE.md  SCAFFOLD_MANIFEST.txt  SECURITY.md  backup_checklist.md
apps/chat-import-bridge/: README.md  pyproject.toml
apps/chat-import-bridge/chat_import_bridge/: config.py  database.py  main.py  models.py
apps/chat-import-bridge/chat_import_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/chat-import-bridge/chat_import_bridge/routers/: export.py  imports.py  promotion.py
apps/chat-import-bridge/chat_import_bridge/services/: export.py  promotion.py  staging.py  staging_db.py
apps/research-agent/: README.md  pyproject.toml
apps/research-agent/migrations/: alembic.ini  env.py
apps/research-agent/migrations/versions/: 001_initial_schema.py  002_fk_indexes.py
apps/research-agent/research_agent/: config.py  dependencies.py  main.py
apps/research-agent/research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/research-agent/research_agent/routers/: claims.py  cleanup.py  entities.py  extraction.py  projects.py  quality.py  reports.py  scraping.py  search.py  sources.py
apps/research-agent/research_agent/services/: extraction.py  quality.py  scraper.py
apps/research-portal/: README.md  pyproject.toml
apps/research-portal/research_portal/: config.py  dependencies.py  main.py  template_utils.py
apps/research-portal/research_portal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/research-portal/research_portal/routers/: api_proxy.py  chat.py  cleanup.py  dashboard.py  extraction.py  quality.py  visual.py
apps/research-portal/research_portal/services/: agent_tools.py  conversation.py  orchestrator.py
apps/research-portal/research_portal/spa/: index.html  package-lock.json  package.json  vite.config.ts
apps/research-portal/research_portal/spa/src/: App.tsx  index.css  router.tsx
apps/research-portal/research_portal/static/: index.html  manifest.webmanifest  sw.js
apps/research-portal/research_portal/static/assets/: Badge-CDpeWenm.js  Button-F7jrwPou.js  Card-DGvnF4Sm.js  ChatView-BzXHCCh_.js  ChatView-CmFwd2Nx.js  ChatView-or-WDx0Q.js  ClaimsView-C5BDsX94.js  ClaimsView-DEHzUPFb.js  ClaimsView-cu2Nhb27.js  CleanupView-C_HpBZrX.js  CleanupView-CnrJ-dID.js  CleanupView-DOdp8cJ7.js  DashboardView-CpweOKQh.js  DashboardView-D2C6F4Dq.js  DashboardView-DXBawsoV.js  (+41 more)
apps/research-portal/research_portal/templates/: base.html  cleanup.html  dashboard.html  extraction.html  graph_viewer.html  quality.html
tests/: conftest.py  pyproject.toml  test_agent_api.py  test_agent_tools.py  test_bridge_api.py  test_conversation.py  test_db_neo4j.py  test_db_pg.py  test_extraction_service.py  test_llm.py  test_models.py  test_orchestrator.py  test_portal_api.py  test_promotion_service.py  test_quality_service.py  test_safety_gates.py  test_scraper_api.py  test_scraper_service.py  test_vector.py
tools/: __main__.py  export.py  extract.py  pyproject.toml  query.py
(+134 files in other folders)
