[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "northstar-tools"
version = "0.1.0"
description = "CLI tools for Northstar Research"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[tool.setuptools]
packages = []

