[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-import-bridge"
version = "0.1.0"
description = "Northstar Chat Import Bridge — SQLite staging, import, promotion"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "structlog>=24.0",
    "httpx>=0.27.0",
    "northstar-models",
]

[tool.setuptools]
packages = ["chat_import_bridge"]
