[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "Northstar Research Agent — FastAPI, LLM extraction, quality scoring"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "northstar-models",
    "northstar-llm",
    "northstar-vector",
    "northstar-db",
]

[project.optional-dependencies]
scraper = ["playwright>=1.40", "cloakbrowser>=0.3.14"]

[tool.setuptools]
packages = ["research_agent"]
